deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: gotus
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  namespace: gotus
  labels:
    app: service
spec:
  selector:
    matchLabels:
      app: service
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - image: hashicorp/http-echo:0.2.3
          name: go-service
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 20
