ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service
  namespace: gotus
  annotations:
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-testing
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
#    nginx.ingress.kubernetes.io/whitelist-source-range: 'XX.XX.XX.XX/32, YY.YY.YY.YY/32'
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
#  tls:
#    - hosts:
#        - mysuper.com
#      secretName: nginx-dashboard-tls
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 8000
            pathType: Prefix
            path: /
